--- a/src/main/resources/MyApp/pages/Index.tml
+++ b/src/main/resources/MyApp/pages/Index.tml
@@ -14,5 +14,7 @@
         <ul>
             <li><t:pagelink page="address/create">Create new address</t:pagelink></li>
         </ul>
+        <t:grid source="addresses"
+                include="honorific,firstName,lastName,street1,city,state,zip,phone"/>
 
 </html>
