--- a/src/main/resources/MyApp/pages/Index.tml
+++ b/src/main/resources/MyApp/pages/Index.tml
@@ -14,7 +14,14 @@
         <ul>
             <li><t:pagelink page="address/create">Create new address</t:pagelink></li>
         </ul>
-        <t:grid source="addresses"
-                include="honorific,firstName,lastName,street1,city,state,zip, phone"/>
 
+        <h1>Pizza</h1>
+        <t:grid source="products"
+                include="price, name, specification"/>
+
+
+        <!--
+        <t:grid source="addresses"
+                include="honorific, firstName,lastName,street1,city,state,zip, phone"/>
+        -->
 </html>
