--- a/src/main/resources/MyApp/pages/Pizza.tml
+++ b/src/main/resources/MyApp/pages/Pizza.tml
@@ -5,12 +5,14 @@
 
 
     <h1>Pizza</h1>
-    <t:grid source="products" row="product" >
+    <t:grid source="products" row="product" include= "price, name, specification, number, basket">
+
         <p:numberCell>
 
         <t:pagelink page="Bid" context="product.name">${product.number}   </t:pagelink>
 
         </p:numberCell>
+
 <!--
     include="price, name, specification, number"/>
 -->
