--- a/src/main/resources/MyApp/pages/address/CreateAddress.tml
+++ b/src/main/resources/MyApp/pages/address/CreateAddress.tml
@@ -6,6 +6,6 @@
         reorder="honorific,firstName,lastName,street1,street2,city,state,zip,email,phone" />
      -->
     <t:beaneditform object="product" submitlabel="message:submit-label"
-                    reorder="price, name, specification" />
+                    reorder="price, name, specification, basket" />
 
 </html>
