--- a/src/main/resources/MyApp/pages/Pizza.tml
+++ b/src/main/resources/MyApp/pages/Pizza.tml
@@ -5,16 +5,22 @@
 
 
     <h1>Pizza</h1>
-    <t:grid source="products" row="product" include= "price, name, specification, number, basket">
+    <t:grid source="products" row="product" rowsPerPage= "10"   include= "price, name, specification, number, basket">
 
         <p:numberCell>
 
-        <t:pagelink page="Bid" context="product.name">${product.number}   </t:pagelink>
+        <t:actionlink t:id = "makeBasket" context="product.id">${product.number} </t:actionlink>
 
+        <!--
+        <t:pagelink page="Bid" context="product.name">${product.number}   </t:pagelink>
+        -->
         </p:numberCell>
 
 <!--
     include="price, name, specification, number"/>
 -->
     </t:grid>
+
+
+    <strong> In your basket: ${guessCount}</strong>
 </html>
