--- a/src/main/resources/MyApp/pages/Index.tml
+++ b/src/main/resources/MyApp/pages/Index.tml
@@ -1,4 +1,4 @@
-<html t:type="layout" title="Hi/Lo Guess"
+<html t:type="layout" title="Pizzeria..."
       xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd"  >
 
 
