--- a/src/main/resources/MyApp/pages/Bid.tml
+++ b/src/main/resources/MyApp/pages/Bid.tml
@@ -2,7 +2,9 @@
       xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd"
         >
 
-    <p>About MyApp application ...</p>
-    <strong>Guess number ${guessCount}</strong>
+    <strong>Guess number ${productID} ${name}</strong>
+
+    <t:beaneditform object="application" submitlabel="message:submit-label"
+                    reorder=" name, street, house, apartment, phone" />
 
 </html>
