--- a/src/main/resources/MyApp/pages/Bid.tml
+++ b/src/main/resources/MyApp/pages/Bid.tml
@@ -2,7 +2,8 @@
       xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd"
         >
 
-    <strong>    In your basket: ${productID} ${price} </strong>
+    <p>    In your basket:  </p>
+    <p>     ${pizza.name}  ${pizza.price}  </p>
 
     <t:beaneditform object="application" submitlabel="message:submit-label"
                     reorder=" name, street, house, apartment, phone" />
