--- a/src/main/resources/MyApp/pages/Bid.tml
+++ b/src/main/resources/MyApp/pages/Bid.tml
@@ -1,11 +1,17 @@
-<html t:type="layout" title="About MyApp"
+<html t:type="layout" title="Корзина"
       xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd"
         >
 
-    <p>    In your basket:  </p>
-    <p>     ${pizza.name}  ${pizza.price}  </p>
+    <strong>    In your basket: ${message}  </strong>
 
-    <t:beaneditform object="application" submitlabel="message:submit-label"
-                    reorder=" name, street, house, apartment, phone" />
+
+    <t:beaneditform object="application"  submitlabel="message:submit-label"
+                    reorder=" name, street, house, apartment, phone"  t:mixins="confirm" t:message="${message:confirm}" />
+<!--
+<p>
+    <t:actionlink  t:id="ok" t:mixins="confirm" t:message="${message:confirm}">Заказать</t:actionlink>
+</p>
+-->
+
 
 </html>
