--- a/src/main/resources/MyApp/components/Layout.tml
+++ b/src/main/resources/MyApp/components/Layout.tml
@@ -74,10 +74,10 @@ Description: A Web 2.0 design with fluid width suitable for blogs and small webs
         <!-- start footer -->
         <div class="footer">
             <p class="legal">
-                &copy;2013 MyApp. All Rights Reserved.
+                &copy;2015 MyApp. All Rights Reserved.
                 &nbsp;&nbsp;&bull;&nbsp;&nbsp;
                 Design by
-                <a href="http://www.freecsstemplates.org/">Free CSS Templates</a>
+                <a href="http://www.freecsstemplates.org/">Shamaev.bs</a>
                 &nbsp;&nbsp;&bull;&nbsp;&nbsp;
                 Icons by
                 <a href="http://famfamfam.com/">FAMFAMFAM</a>.
