--- a/src/main/resources/MyApp/pages/Bid.tml
+++ b/src/main/resources/MyApp/pages/Bid.tml
@@ -2,7 +2,7 @@
       xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd"
       xmlns:p="tapestry:parameter">
 
-    <strong>    In your basket:   </strong>
+    <p> <strong>    In your basket:   </strong> </p>
 
     <!--
     <p>${message}</p>
