--- a/src/main/resources/MyApp/components/Layout.tml
+++ b/src/main/resources/MyApp/components/Layout.tml
@@ -36,6 +36,7 @@ Description: A Web 2.0 design with fluid width suitable for blogs and small webs
                         <t:pagelink  page="prop:pageName"> ${pageName}</t:pagelink>
                     </li>
                 </ul    >
+                <div class="basket-pic"></div>
             </div>
         </div>
         <!-- end header -->
