--- a/src/main/resources/MyApp/pages/Bid.tml
+++ b/src/main/resources/MyApp/pages/Bid.tml
@@ -33,14 +33,14 @@
 
             <div class="t-application">
 
-                <t:beaneditor t:id="application" object="application">[BeanEditForm here]
+                <t:beaneditor t:id="application"  object="application">[BeanEditForm here]
                <!-- <p:version>
                     <t:hidden value="application.version"/>
                 </p:version>
                 -->
                 </t:beaneditor>
 
-                <div class="t-application-row">
+                <div class="but-save">
                 <input t:type="submit" value="Save"  t:mixins="confirm" t:message="${message:confirm}" />
                 <!--
                 <a t:type="eventlink" t:event="refresh" href="#">Refresh</a>&nbsp;
