--- a/src/main/resources/MyApp/components/Layout.tml
+++ b/src/main/resources/MyApp/components/Layout.tml
@@ -33,13 +33,20 @@ Description: A Web 2.0 design with fluid width suitable for blogs and small webs
                 </h1>
             </div>
             <div class="menu">
-                <ul>
+                <div id="bloktopmenu">
+                <ul >
                     <li t:type="loop" source="pageNames" value="pageName" class="prop:classForPageName">
                         <t:pagelink  page="prop:pageName"> ${pageName}</t:pagelink>
                     </li>
                 </ul    >
-                <div class="basket-pic"></div>
+
+                </div>
             </div>
+            <!--
+            <a href="/MyApp/bid">
+                <div class="basket-pic"></div>
+            </a>
+            -->
         </div>
         <!-- end header -->
         <!-- start page -->
