--- a/src/main/resources/MyApp/pages/Bid.tml
+++ b/src/main/resources/MyApp/pages/Bid.tml
@@ -1,14 +1,14 @@
 <html t:type="layout" title="Корзина"
       xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd"
       xmlns:p="tapestry:parameter">
-
+    <!--
     <p> <strong>    In your basket:   </strong> </p>
-
+    -->
     <!--
     <p>${message}</p>
     -->
     <p>
-    <t:grid source="commodities"    include= "price, name, amt" row="commodity" add="delete, addition, decrease ">
+    <t:grid source="commodities"    include= "price, name, amt" row="commodity" add="addition, decrease,delete" >
         <p:deletecell>
             <t:actionlink t:id="delete"       value="commodity.id" context="commodity.id">Delete</t:actionlink>
         </p:deletecell>
@@ -49,9 +49,11 @@
 
         </form>
     </p>
+    <div class="InTotal">
     <p>
-        <strong>    In total:${cost}   </strong>
+        <strong>    ${cost}   </strong>
     </p>
+    </div>
     <!--
     <t:beaneditform object="application"  submitlabel="message:submit-label"
            reorder=" name, street, house, apartment, phone"  t:mixins="confirm" t:message="${message:confirm}" />
